service-simple/server.yaml
---
# a simple service, on two nodes, backed by a cloud LB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-dep1
spec:
  selector:
    matchLabels:
      app: hello1
  replicas: 2
  template:
    metadata:
      labels:
        app: hello1
        a: a
    spec:
      terminationGracePeriodSeconds: 2
      serviceAccount: default
      containers:
      - name: hello1
        image: k8s.gcr.io/e2e-test-images/agnhost:2.26
        command:
          - /agnhost
          - netexec
          - --http-port=8080
        ports:
        - containerPort: 8080
        - containerPort: 8081
          protocol: UDP
        volumeMounts:
          - mountPath: /tmp
            name: tmp
      volumes:
        - name: tmp
          emptyDir: {}
      # Ensure this is on multiple nodes
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: client
                topologyKey: kubernetes.io/hostname
