service-simple/service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello1
spec:
  type: ClusterIP
  ports:
    - name: hello1
      port: 80
      targetPort: 8080
    - name: hello1-udp
      port: 81
      targetPort: 8081
      protocol: UDP
  selector:
    app: hello1
