service-simple/cnp-client-allow-service.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-client-to-service
spec:
  endpointSelector:
    matchLabels:
      app: client
  egress:
    - toServices:
      - k8sService:
          serviceName: hello1
      - k8sService:
          serviceName: bottomless
    - toEntities:
        - kube-apiserver
