service-simple/policy-server-deny-all.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: server-deny-all
spec:
  podSelector:
    matchLabels:
      app: hello1
  ingress: []
